[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpanel-cli"
dynamic = ["version", "authors", "description", "urls"]
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "GNU General Public License v3 (GPLv3)" }
keywords = ["cpanel", "cli", "command-line", "hosting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = ["cpanel-api>=0.3.0", "parsedatetime>=2.6"]

[project.optional-dependencies]
dev = [
    "cpanel-api>=0.3.0",
    "parsedatetime>=2.6",
    "build>=1.2",
    "tox>=4.22",
    "Sphinx>=5.0",
    "sphinx-book-theme>=1.1.3",
    "twine>=5.1.1",
]

[project.scripts]
cpanel = "cpanel.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["cpanel/*.py", "cpanel/USAGE", "cpanel/REFERENCE"]

[tool.hatch.build.targets.sdist]
include = [
    "cpanel/*.py",
    "cpanel/USAGE",
    "cpanel/REFERENCE",
    "Makefile",
    "pyproject.toml",
    "pyrightconfig.json",
    "hatch.py",
    "README.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "API.md",
    "tox.ini",
    "test/*.py",
    "test/cpanelrc.test.example",
    ".readthedocs.yaml",
    "doc/*.rst",
    "doc/conf.py",
    "doc/requirements.txt",
    "doc/*.po",
    "doc/*.sh",
    "doc/*.svg",
    "doc/*.css",
]
exclude = ["**/__pycache__", "doc/build/*"]

[tool.hatch.metadata.hooks.custom]
path = "./hatch.py"
