[metadata]
name = cpanel-cli
version = 0.1.0
author = Marco Bravo Mejías
author_email = marco@layfellow.net
description = cPanel 2 CLI
long_description = file: README.rst
url = https://github.com/layfellow/cpanel-cli
project_urls =
    Bug Tracker = https://github.com/layfellow/cpanel-cli/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = cpanel
